<resources>
    <string name="app_name">AirTrip</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signup">Sign Up</string>
    <string name="login">Login</string>
    <string name="booking">Book Flight</string>
    <string name="name">Name</string>
    <string name="phone">Phone Number</string>
    <string name="address">Address</string>
    <string name="dont_have_an_account">Dont Have an Account? Register Now!</string>
    <string name="one_way">One Way</string>
    <string name="from">From</string>
    <string name="round">Round</string>
    <string name="to">To</string>
    <string name="departure">Departure</string>
    <string name="traveller">Traveller</string>
    <string name="search">Search</string>
    <string name="seat">Seat</string>
    <string name="home">Home</string>
    <string name="history">History</string>
    <string name="profile">Profile</string>
    <string name="seat_class">Class</string>
    <string name="discover_beautiful">Discover A Beautiful</string>
    <string name="place_with_us">Place With Us</string>
    <string name="returnn">Return</string>
    <string name="discover_full">Discover Beautiful Place With Us</string>
    <string name="time_ex">5:50</string>
    <string name="place_init_ex">DEL</string>
    <string name="place_detail_ex">Delhi</string>
    <string name="time_arrived_ex">7:30</string>
    <string name="place_arrived_ex">CLC</string>
    <string name="place_arrived_detail_ex">Colcata</string>
    <string name="seat_class_ex">Business Class</string>
    <string name="price_ex">RP.750.000</string>
    <string name="book_now">Book Now</string>
    <string name="duration_ex">1 hr 20 min</string>
    <string name="search_result">Search Result</string>
    <string name="flight_detail">Flight Detail</string>
    <string name="date_departure_ex">28/12/22</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="price">Price</string>
    <string name="payment_method">Payment Method</string>
    <string name="payment_1">Payment 1</string>
    <string name="payment_2">Payment 2</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="Update">Update</string>
    <string name="logout">Logout</string>
    <string name="aitport_depart_ex">Indra Gandhi Intenational Airport</string>
    <string name="airport_arrived_ex">Subhash Chandra Bose Internatonal Airport</string>
    <string name="boarding_pass">Boarding Pass</string>
    <string name="passenger_name">Passenger Name</string>
    <string name="name_ex">Lionel Messi</string>
    <string name="duration">Duration</string>
    <string name="find_your_destination">Find Your Destination</string>
    <string name="seat_ex">2B</string>
    <string name="flight_data">Flight Data</string>
    <string name="arrival">Arrival</string>
    <string name="flight_class">Flight Class</string>
    <string name="departure_airport">Departure Airport</string>
    <string name="arrival_airport">Arrival Airport</string>
    <string name="create_flight">Create Flight</string>
    <string name="update_flight">Update Flight</string>
    <string name="delete_flight">Delete Flight</string>
    <string name="airport_data">Airport Data</string>
    <string name="iata">IATA</string>
    <string name="airport_name">Airport Name</string>
    <string name="airport_address">Airport Address</string>
    <string name="create_aiport">Create Aiport</string>
    <string name="update_airport">Update Airport</string>
    <string name="delete_airport">Delete Airport</string>
    <string name="saldo">Saldo</string>
    <string name="titik2">:</string>
    <string name="tickets">Tickets</string>
    <string name="message">Message :</string>
    <string name="create_time">Create Time :</string>
    <string name="title_activity_peralihan">PeralihanActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_admin">AdminActivity</string>
    <string name="select">Select</string>
</resources>