<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardCornerRadius="20dp"
    android:layout_margin="20dp"
    tools:context=".presentation.ui.buyer.DetailFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_title_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/flight_detail"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="153dp"
        android:layout_height="103dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="@+id/tv_title_detail"
        app:layout_constraintStart_toStartOf="@+id/tv_title_detail"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_detail" />

    <TextView
        android:id="@+id/tv_time_departure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif"
        android:text="@string/time_ex"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_logo" />

    <TextView
        android:id="@+id/tv_place_departure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/place_init_ex"
        app:layout_constraintStart_toStartOf="@+id/tv_time_departure"
        app:layout_constraintTop_toBottomOf="@+id/tv_time_departure" />

    <TextView
        android:id="@+id/tv_detail_place_departure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="16dp"
        android:text="@string/place_detail_ex"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/tv_place_departure"
        app:layout_constraintTop_toBottomOf="@+id/tv_time_departure" />

    <TextView
        android:id="@+id/tv_time_arrived"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:text="@string/time_arrived_ex"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_logo" />

    <TextView
        android:id="@+id/tv_detail_place_arrived"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/place_arrived_detail_ex"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_time_arrived"
        app:layout_constraintTop_toBottomOf="@+id/tv_time_arrived" />

    <TextView
        android:id="@+id/tv_place_arrived"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/place_arrived_ex"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/tv_detail_place_arrived"
        app:layout_constraintTop_toBottomOf="@+id/tv_time_arrived" />

        <ImageView
            android:id="@+id/iv_line"
            android:layout_width="159dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:src="@drawable/line"
            app:layout_constraintEnd_toStartOf="@+id/tv_time_arrived"
            app:layout_constraintStart_toEndOf="@+id/tv_time_departure"
            app:layout_constraintTop_toBottomOf="@+id/iv_logo" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="12dp"
            android:src="@drawable/ic_plane_circle"
            app:layout_constraintEnd_toStartOf="@+id/tv_time_arrived"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toEndOf="@+id/tv_time_departure"
            app:layout_constraintTop_toBottomOf="@+id/iv_logo" />

        <TextView
            android:id="@+id/tv_date_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/date"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="@+id/tv_airport_depart"
            app:layout_constraintTop_toBottomOf="@+id/tv_airport_depart" />

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/border_black"
            android:drawableStart="@drawable/ic_date"
            android:drawablePadding="10dp"
            android:padding="10dp"
            android:text="@string/date_departure_ex"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="@+id/tv_date_title"
            app:layout_constraintTop_toBottomOf="@+id/tv_date_title" />

        <TextView
            android:id="@+id/tv_time_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/duration"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="@+id/tv_aiport_arrive"
            app:layout_constraintTop_toBottomOf="@+id/tv_aiport_arrive" />

        <TextView
            android:id="@+id/tv_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/border_black"
            android:drawableStart="@drawable/ic_time"
            android:drawablePadding="10dp"
            android:padding="10dp"
            android:text="@string/duration_ex"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@+id/tv_time_title"
            app:layout_constraintTop_toBottomOf="@+id/tv_time_title" />

        <TextView
            android:id="@+id/tv_price_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="76dp"
            android:layout_marginTop="40dp"
            android:fontFamily="sans-serif"
            android:text="@string/price"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="@+id/tv_date"
            app:layout_constraintTop_toBottomOf="@+id/tv_date" />

        <TextView
            android:id="@+id/tv_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="40dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/price_ex"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/tv_price_title"
            app:layout_constraintTop_toBottomOf="@+id/tv_duration" />


        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:fontFamily="sans-serif"
            android:text="@string/payment_method"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="@+id/tv_price"
            app:layout_constraintHorizontal_bias="0.314"
            app:layout_constraintStart_toStartOf="@+id/tv_price_title"
            app:layout_constraintTop_toBottomOf="@+id/tv_price" />

        <TextView
            android:id="@+id/tv_airport_depart"
            android:layout_width="135dp"
            android:layout_height="34dp"
            android:text="@string/aitport_depart_ex"
            app:layout_constraintStart_toStartOf="@+id/tv_place_departure"
            app:layout_constraintTop_toBottomOf="@+id/tv_place_departure" />

        <TextView
            android:id="@+id/tv_aiport_arrive"
            android:layout_width="150dp"
            android:layout_height="34dp"
            android:text="@string/airport_arrived_ex"
            app:layout_constraintEnd_toEndOf="@+id/tv_detail_place_arrived"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_place_arrived"
            android:textAlignment="viewEnd"/>

        <Button
            android:id="@+id/btn_payment1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/blue_base"
            android:text="@string/payment_1"
            app:layout_constraintEnd_toStartOf="@+id/textView5"
            app:layout_constraintHorizontal_bias="0.34"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <Button
            android:id="@+id/btn_payment2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="60dp"
            android:text="@string/payment_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            android:backgroundTint="@color/blue_base"/>

        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="150dp"
            android:layout_height="64dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="36dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/blue_base"
            android:padding="15sp"
            android:text="@string/confirm"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_payment1" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="150dp"
            android:layout_height="64dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/blue_base"
            android:padding="15dp"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_payment2" />


    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.cardview.widget.CardView>