<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.admin.FlightFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/flight_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/flight_data"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/et_departure"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/border_black_thick"
                android:hint="@string/departure"
                android:padding="15sp"
                app:layout_constraintEnd_toEndOf="@+id/flight_title"
                app:layout_constraintStart_toStartOf="@+id/flight_title"
                app:layout_constraintTop_toBottomOf="@+id/flight_title" />

            <EditText
                android:id="@+id/et_arrival"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/border_black_thick"
                android:hint="@string/arrival"
                android:padding="15sp"
                app:layout_constraintEnd_toEndOf="@+id/et_departure"
                app:layout_constraintStart_toStartOf="@+id/et_departure"
                app:layout_constraintTop_toBottomOf="@+id/et_departure" />

            <EditText
                android:id="@+id/et_flight_class"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/border_black_thick"
                android:hint="@string/flight_class"
                android:padding="15sp"
                app:layout_constraintEnd_toEndOf="@+id/et_arrival"
                app:layout_constraintStart_toStartOf="@+id/et_arrival"
                app:layout_constraintTop_toBottomOf="@+id/et_arrival" />

            <EditText
                android:id="@+id/et_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/border_black_thick"
                android:hint="@string/price"
                android:padding="15sp"
                app:layout_constraintEnd_toEndOf="@+id/et_flight_class"
                app:layout_constraintStart_toStartOf="@+id/et_flight_class"
                app:layout_constraintTop_toBottomOf="@+id/et_flight_class"/>

            <EditText
                android:id="@+id/et_departure_airport"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/border_black_thick"
                android:hint="@string/departure_airport"
                android:padding="15sp"
                app:layout_constraintEnd_toEndOf="@+id/et_price"
                app:layout_constraintStart_toStartOf="@+id/et_price"
                app:layout_constraintTop_toBottomOf="@+id/et_price" />

            <EditText
                android:id="@+id/et_arrival_airport"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/border_black_thick"
                android:hint="@string/arrival_airport"
                android:padding="15sp"
                app:layout_constraintEnd_toEndOf="@+id/et_departure_airport"
                app:layout_constraintStart_toStartOf="@+id/et_departure_airport"
                app:layout_constraintTop_toBottomOf="@+id/et_departure_airport" />

            <Button
                android:id="@+id/btn_create_flight"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/blue_base"
                android:padding="15sp"
                android:text="@string/create_flight"
                app:layout_constraintStart_toStartOf="@+id/et_arrival_airport"
                app:layout_constraintTop_toBottomOf="@+id/et_arrival_airport" />

            <Button
                android:id="@+id/btn_update_flight"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/blue_base"
                android:padding="15sp"
                android:text="@string/update_flight"
                app:layout_constraintEnd_toEndOf="@+id/et_arrival_airport"
                app:layout_constraintTop_toBottomOf="@+id/et_arrival_airport" />

            <Button
                android:id="@+id/btn_delete_flight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="70dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="70dp"
                android:backgroundTint="@color/blue_base"
                android:padding="15sp"
                android:text="@string/delete_flight"
                app:layout_constraintEnd_toEndOf="@+id/btn_update_flight"
                app:layout_constraintStart_toStartOf="@+id/btn_create_flight"
                app:layout_constraintTop_toBottomOf="@+id/btn_update_flight" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</FrameLayout>